Add JsonPatchBuilder and JsonPointerBuilder helpers (Phase 3)
Provides a fluent API for assembling internal JsonPatchDocument values
without hand-concatenating JSON Pointer strings:

- JsonPointerBuilder escapes RFC 6901 tokens (~ -> ~0, / -> ~1),
  supports numeric indices and the /- array-append token.
- JsonPatchBuilder records add/replace/test in declaration order and
  exposes PatchWriteOptions (default conservative: no auto-creation
  of missing intermediates).
- Tracker in AGGREGATION_WORKFLOW_MIGRATION_PLAN.md updated to mark
  Phase 3 complete.